Latihan HTML CSS 1 Done

--- a/HTML & CSS/Latihan/index.html
+++ b/HTML & CSS/Latihan/index.html
@@ -13,11 +13,13 @@
 </head>
 <body>
     <header>
-        <h1>Bandung</h1>
-        <p>
-            Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu
-            kota provinsi tersebut.
-        </p>
+        <article class="jumbotron">
+            <h1>Bandung</h1>
+            <p>
+                Kota metropolitan terbesar di Provinsi Jawa Barat, sekaligus menjadi ibu
+                kota provinsi tersebut.
+            </p>
+        </article>
 
         <nav>
             <ul>
@@ -30,9 +32,9 @@
 
     <main>
         <div id="content">
-            <article id="sejarah">
+            <article id="sejarah" class="card">
                 <h2>Sejarah</h2>
-                <img src="assets/history.jpg" alt="History JPG">
+                <img src="assets/history.jpg" alt="History JPG" class="featured-image">
                 <p>
                     Kata Bandung berasal dari kata bendung atau bendungan karena terbendungnya
                     sungai Citarum oleh lava Gunung Tangkuban Parahu yang lalu membentuk
@@ -54,9 +56,9 @@
                 </p>
             </article>
 
-            <article id="geografis">
+            <article id="geografis" class="card">
                 <h2>Geografis</h2>
-                <img src="assets/geografis.jpg" alt="Geografis JPG">
+                <img src="assets/geografis.jpg" alt="Geografis JPG" class="featured-image">
                 <p>
                     Kota Bandung dikelilingi oleh pegunungan, sehingga bentuk morfologi
                     wilayahnya bagaikan sebuah mangkok raksasa, secara geografis kota ini
@@ -75,7 +77,7 @@
                 </p>
             </article>
 
-            <article id="wisata">
+            <article id="wisata" class="card">
                 <h2>Wisata</h2>
                 <p>
                     Sejak dibukanya Jalan Tol Cipularang, kota Bandung telah menjadi tujuan
@@ -86,7 +88,7 @@
                 </p>
 
                 <h3>Farm House Lembang</h3>
-                <img src="assets/farm-house.jpg" alt="House JPG">
+                <img src="assets/farm-house.jpg" alt="House JPG" class="featured-image">
                 <p>
                     Berada di jalur utama Bandung-Lembang, Farm House menjadi objek wisata
                     yang tidak pernah sepi pengunjung. Selain karena letaknya strategis,
@@ -95,7 +97,7 @@
                 </p>
 
                 <h3>Observatorium Bosscha</h3>
-                <img src="assets/bosscha.jpg" alt="Bosscha JPG">
+                <img src="assets/bosscha.jpg" alt="Bosscha JPG" class="featured-image">
                 <p>
                     Memiliki beberapa teleskop, antara lain, Refraktor Ganda Zeiss, Schmidt
                     Bimasakti, Refraktor Bamberg, Cassegrain GOTO, dan Teleskop Surya.
@@ -110,14 +112,16 @@
             </article>
         </div>
 
-        <aside>
+        <aside class="card">
             <article class="profile">
-                <h2>Kota Bandung</h2>
-                <p>Kota Kembang Paris van Java</p>
-                <figure>
-                    <img src="assets/logo.png" />
-                    <figcaption>Lambang</figcaption>
-                </figure>
+                <header>
+                    <h2>Kota Bandung</h2>
+                    <p>Kota Kembang Paris van Java</p>
+                    <figure>
+                        <img src="assets/logo.png" alt="Logo Surabaya"/>
+                        <figcaption>Lambang</figcaption>
+                    </figure>
+                </header>
                 <table>
                     <tr>
                         <th>Negara</th>
